--- a/static/account/css/edit.css
+++ b/static/account/css/edit.css
@@ -1,263 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-}
-
-body{
-    box-sizing: border-box;
-    background-color: white;
-    color: black;
-    position: relative;
-    min-height: 100vh;
-    width: 100%;
-    overflow-y: scroll;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-    background-color: #32393E;
-}
-
-li, a, button{
-    font-weight: 500;
-    font-size: 16px;
-    color: white;
-    text-decoration: none;
-}
-
-footer{
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding: 0.5%;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    position: fixed;
-}
-
-.logo{
-    cursor: pointer;
-    background-color: #32393E;
-    max-height: 50px;
-    max-width: 90px;
-}
-
-.nav__links{
-    list-style: none;
-    background-color: #32393E;
-}
-
-.nav__links li{
-    display: inline-block;
-    padding: 0px 20px;
-    background-color: #32393E;
-}
-
-.nav__links li a{
-    transition: all 0.3s ease 0s;
-    background-color: #32393E;
-}
-
-.nav__links li a:hover{
-    color: cyan;
-}
-
-button{
-    padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-.cta{
-    background-color: #32393E;
-}
-
-button:hover{
-    background-color: rgba(0,136,169,0.8);
-}
-
-.sidebar{
-    position: fixed;
-    width: 50px;
-    height: 100%;
-    background-color: #323950;
-    top: 0;
-    left: 0;
-    padding: 6px 14px;
-    transition: all 0.5s ease;
-}
-
-.sidebar.active{
-    width: 250px;
-}
-
-.sidebar .logo_content .logo{
-    color: white;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: 0.2s ease;
-}
-
-.sidebar.active .logo_content .logo{
-    opacity: 1;
-    pointer-events: none;
-    transition: 0.2s ease;
-}
-
-.logo_content .logo img{
-    font-size: 28px;
-    margin-right: 5px;
-    max-width: 90px;
-    max-height: 60px;
-}
-
-.logo_content .logo .logo_name{
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.sidebar #menu{
-    position: absolute;
-    color: white;
-    left: 50%;
-    top: 6px;
-    font-size: 20px;
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    line-height: 50px;
-    transform:  translateX(-50%);
-}
-
-.sidebar #menu:hover{
-    transition: 0.5s ease;
-    background: black;
-}
-
-.sidebar.active #menu{
-    left: 90%;
-}
-
-.sidebar ul{
-    margin-top: 20px;
-}
-
-.sidebar ul li{
-    list-style: none;
-    height: 50px;
-    width: 100%;
-    margin: 0 5px;
-    position: relative;
-    line-height: 50px;
-}
-
-.sidebar ul li a{
-    color: white;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    transition: all 0.4s ease;
-    border-radius: 12px;
-    white-space: nowrap;
-    padding-left: 3px;
-}
-
-.sidebar ul li a:hover{
-    background: white;
-    color: black;
-    padding-left: 8px;
-}
-
-.sidebar ul li a img{
-    min-height: 40px;
-    min-width: 40px;
-    max-width: 40px;
-    max-height: 40px;
-    border-radius: 12px;
-    line-height: 50px;
-    text-align: center;
-}
-
-.sidebar .links_name{
-    opacity: 0;
-    pointer-events: none;
-    transition: 0.2s ease;
-}
-
-.sidebar.active .links_name{
-    opacity: 1;
-    pointer-events: auto;
-    transition: 0.2s ease;
-}
-
-.sidebar ul li .tooltip{
-    position: absolute;
-    height: 35px;
-    width: 122px;
-    background: white;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    left: 122px;
-    top: 0;
-    transform: translate(-50% , -50%);
-    border-radius: 6px;
-    line-height: 35px;
-    text-align: center;
-    color: black;
-    transition: 0s;
-    opacity: 0;
-    pointer-events: none;
-    display: block;
-}
-
-.sidebar.active ul li .tooltip{
-    display: none;
-}
-
-.sidebar ul li:hover .tooltip{
-    top: 50%;
-    transition: all 0.5s ease;
-    opacity: 1;
-}
-
-.home_section{
-    transition: 0.5s ease;
-    margin-left: 75px;
-}
-
-.home_section.active{
-    transition: 0.5s ease;
-    margin-left: 250px;
-}
-
 .profile{
-    text-align: center;
-    margin-top: 2%;
+    display: flex;
+    align-items: flex-start;
+    margin-left: 150px;
     transition: 0.5s ease;
 }
 
 .profile.active{
-    margin-left: 23%;
+    margin-left: 350px;
     transition: 0.5s ease;
 }
 
-.profile img{
-    width: 330px;
-    height: 330px;
-    margin-top: 3%;
+.profile-image{
+    width: 200px;
+    height: 200px;
+    z-index: 1;
+    border-radius: 50px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.info-box {
+    margin-top: -100px;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.profile-info {
+    margin-top: 60px;
+    margin-left: 15px;
+}
+
+.name {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.username {
+    font-size: 20px;
+}
+
+.cover-image {
+    width: 100%;
+    height: 400px;
+    z-index: -1;
+    object-fit: cover;
+    object-position: center;
+}
+
+.posts {
+    margin-left: 20px;
+    margin-top: 50px;
+}
+
+.post-box {
+    background-color: rgb(245, 245, 245);
+    border-radius: 20px;
+    width: 97%;
+    padding: 10px;
+}
+
+.profile-container {
+    border-left: 1px solid rgb(68, 68, 68);
+    width: 70%;
+    min-height:700px;
+    overflow-y: visible;
+}
+
+.right-container {
+    width: 20%;
+    border-left: 1px solid rgb(68, 68, 68);
+    padding-left: 5px;
+    min-height:700px;
+    overflow-y: visible;
+}
+
+.left-container.small {
+    display: none;
 }
 
 h2{
@@ -273,6 +92,26 @@ h2.active{
 
 h3{
     margin-bottom: 1%;
+}
+
+
+.profile-info-box {
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+}
+
+.edit-profile {
+    float: right;
+    margin-top: 80px;
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.friend-heading {
+    margin-left: 10px;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .background_images input{
@@ -300,4 +139,79 @@ h3{
     .profile.active{
         margin-left: 45%;
     }
+}
+
+.popup-edit-profile {
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.edit-profile-box {
+    position: absolute;
+    left: 30%;
+    top: 10%;
+    width: 40%;
+    background-color: white;
+    border-radius: 10px;
+    height: 70%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.cover-image-edit{
+    width: 100%;
+    height: 200px;
+    z-index: 4;
+    cursor: pointer;
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile-image-edit {
+    z-index: 5;
+    margin-top: -50px;
+    margin-left: 30px;
+    width: 100px;
+    height: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    object-fit: cover;
+    object-position: center;
+}
+
+.form-edit-profile {
+    padding: 20px;
+}
+
+.form-edit-profile label{
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.form-edit-profile input, .form-edit-profile textarea{
+    width: 100%;
+    padding: 5px;
+    border-radius: 10px;
+    border: 1px solid grey;
+    margin-bottom: 20px;
+}
+
+.form-edit-profile textarea{
+    height: 100px;
+}
+
+.button-close {
+    float: right;
+    z-index: 4;
+    color: white;
+    position: inherit;
+    top: 0%;
+    right: 30px;
+    font-size: 25px;
+    cursor: pointer;
 }
