welcome page added, welcome header link added to main

--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -16,6 +16,7 @@
                 <img class="logo" src="{% static 'images/logo.jpg' %}" alt="logo">
                 <nav>
                     <ul class="nav__links">
+                        <li><a href="#">Welcome</a></li>
                         <li><a href="../about/about.html">About</a></li>
                         <li><a href="#">Help</a></li>
                         <li><a href="#">Contacts</a></li>
