--- a/static/dashboard/css/relax.css
+++ b/static/dashboard/css/relax.css
@@ -1,9 +1,3 @@
-.sidebar.collapse{
-    display: none;
-    transition: 0.5s ease;
-    opacity: 0;
-}
-
 .home_section.collapse{
     opacity: 0;
     transition: 0.5s ease;
@@ -58,8 +52,13 @@
 .toogle-player.position{
     left: 20px;
     bottom: 50px;
+    transition: 0.5s ease;
 }
 
+.toogle-player.active{
+    left: 20%;
+    transition: 0.5s ease;
+}
 
 .toogle {
     display: flex;
