--- a/templates/main/main_dashboard.html
+++ b/templates/main/main_dashboard.html
@@ -30,7 +30,7 @@
                     <span class="tooltip">Agenda</span>
                 </li>
                 <li>
-                    <a href="{% url 'archieve' %}">
+                    <a href="{% url 'archive' %}">
                         <i class="fa fa-book fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Note Archive</span>
                     </a>
