--- a/static/notes/css/note_archive.css
+++ b/static/notes/css/note_archive.css
@@ -1,149 +1,5 @@
-.agenda{
-    margin-left: 100px;
-    transition: 0.5s ease;
-}
-
-.agenda.active{
-    margin-left: 300px;
-    transition: 0.5s ease;
-}
-
-form{
-    display: flex;
-    min-height: 15vh;
-    justify-content: left;
-    align-items: center;
-}
-
-form input, form button{
-    padding: 0.4 rem;
-    border-radius: 10px;
-    font-size: 1.6 rem;
-    background: white;
-}
-
-form button{
-    color: grey;
-    background: aqua;
-    cursor: pointer;
-    transition: all 0.3 ease;
-    padding: 5px 10px;
-    font-size: 12px;
-    margin-left: 5px;
-}
-
-form button:hover{
-    background-color: lightblue;
-    color: black;
-}
-
-select{
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    outline: none;
-    border: none;
-}
-
-.select{
-    margin: 1rem;
-    position: relative;
-    overflow: hidden;
-}
-
-select{
-    color: #c065c0;
-    width: 8rem;
-    cursor: pointer;
-    padding: 0.7rem;
-}
-
-.select::after{
-    content: "\25bc";
-    position: absolute;
-    color: #c065c0;
-    top: 7px;
-    right: 6px;
-    pointer-events: none;
-}
-
-.select:hover::after{
-   color: #583429;
-}
-
-.todo_container{
-    display: flex;
-    justify-content: left;
-    align-items: center;
-}
-
-.todo_list{
-    min-width: 40%;
-    list-style: none;
-}
-
-.todo_input{
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.todo{
-    margin: 5px auto;
-    background: rgb(46, 44, 44);
-    color: #000000;
-    display: flex;
-    font-size: 1.2rem;
-    padding: 0.3rem;
-    justify-content: space-between;
-    align-items: center;
-    transition: all 0.5s ease;
-    border-radius: 10px;
-}
-
-.todo li {
-    flex: 1;
-    white-space: nowrap;
-}
-
-.complete_btn, .delete_btn{
-    padding: 0.5rem;
-    background: #ff3700;
-    color: white;
-    border: none;
-    margin-left: 0.2rem;
-    cursor: pointer;
-    font-size: 1rem;
-}
-
-.complete_btn{
-    background: rgb(67, 179, 67);
-}
-.complete_btn:active{
-    background: green;
-}
-
-.delete_btn:active{
-    background: #b65337;
-}
-
-.fa-trash, .fa-check{
-    pointer-events: none;
-}
-
-.completedItem{
-    text-decoration: line-through;
-    opacity: 0.5;
-    transform: scale(0.96);
-}
-
-.fall{
-    transform: 0.3 ease;
-    opacity: 0;
-}
-
 .notes{
-    margin-left: 5%;
-    margin-top: 3%;
+    margin-top: 30px;
     display: inline-block;
 }
 
@@ -223,6 +79,7 @@ select{
     margin-left: 8%;
     margin-top: 2%;
     transition: 0.5s ease;
+    margin-bottom: 50px;
 }
 
 .private.active{
@@ -239,4 +96,121 @@ select{
     display: inline-flexbox;
     margin-top: 1%;
     margin-left: 85%;
+}
+
+.notes-container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.loader {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    animation: spin 2s linear infinite;
+    margin: 30px auto;
+    display: none;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.no-notes {
+    margin: 0 auto;
+    color: grey;
+}
+
+.notes {
+    margin: 20px 20px;
+    width: 200px;
+    text-align: center;
+}
+
+.notes img{
+    border: 1px solid grey;
+    cursor: pointer;
+}
+
+.notes h4{
+    cursor: pointer;
+}
+
+.more {
+    margin: 20px auto;
+    display: block;
+}
+
+.page {
+    padding-bottom: 30px;
+}
+
+.action {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-left: 60px;
+}
+
+.edit, .delete {
+    width: 30px;
+    height: 30px;
+    margin: 5px;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.edit {
+    background-color: #00ac33;
+}
+
+.delete {
+    background-color: rgb(207, 0, 0);
+}
+
+.confirm-delete {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    display: none;
+}
+
+.confirm-box {
+    background-color: white;
+    width: 30%;
+    min-width: 500px;
+    min-height: 100px;
+    margin: 0 auto;
+    margin-top: 30vh;
+    border-radius: 30px;
+    padding: 50px 30px;
+    padding-bottom: 10px;
+}
+
+.confirm-text {
+    font-size: 18px;
+}
+
+.button-action{
+    float: right;
+    margin-top: 20px;
+}
+
+.delete-confirm {
+    background-color: rgb(197, 2, 2);
+}
+
+.delete-confirm:hover {
+    background-color: rgb(148, 0, 0);
+}
+.cancel-confirm {
+    background-color: #3498db;
 }
