--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul class="nav__links">
                         <li><a href="#">Welcome</a></li>
-                        <li><a href="../about/about.html">About</a></li>
+                        <li><a href="{% url 'about' %}">About</a></li>
                         <li><a href="#">Help</a></li>
                         <li><a href="#">Contacts</a></li>
                         <li><a href="{% block link %}{% endblock %}">{% block link_title %}{% endblock %}</a></li>
