--- a/static/notes/css/note_archive.css
+++ b/static/notes/css/note_archive.css
@@ -3,12 +3,6 @@
     display: inline-block;
 }
 
-.notes img{
-    margin-left: 10px;
-    max-width: 150px;
-    max-height: 300px;
-}
-
 .notes h4{
     text-align: center;
 }
@@ -67,16 +61,27 @@
 
 .search input{
     padding: 6px;
+    width: 30%;
+    min-width: 300px;
+    border-radius: 15px;
+    border: 1px solid grey;
+}
+
+.search input:focus {
+    border: 2px solid rgba(0,136,169,1);
+    outline: none;
+}
+
+.search button {
+    border-radius: 10px;
 }
 
 .private{
-    margin-left: 8%;
     margin-top: 2%;
     transition: 0.5s ease;
 }
 
 .public{
-    margin-left: 8%;
     margin-top: 2%;
     transition: 0.5s ease;
     margin-bottom: 50px;
@@ -104,8 +109,9 @@
 }
 
 .loader {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #3498db; /* Blue */
+    border: 8px solid rgba(0, 0, 0, 0); /* Light grey */
+    border-top: 8px solid rgba(0,136,169,1);
+    border-left: 8px solid rgba(0,136,169,1);
     border-radius: 50%;
     width: 25px;
     height: 25px;
@@ -131,12 +137,23 @@
 }
 
 .notes img{
-    border: 1px solid grey;
+    border: 0.5px solid grey;
     cursor: pointer;
+    width: 100%;
+    max-height: 300px;
+}
+
+.notes img:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: none;
 }
 
 .notes h4{
     cursor: pointer;
+}
+
+.notes:hover {
+    color: rgba(0,136,169,1);
 }
 
 .more {
@@ -146,6 +163,8 @@
 
 .page {
     padding-bottom: 30px;
+    margin-left: calc(2% + 100px);
+    margin-right: 50px;
 }
 
 .action {
@@ -166,10 +185,26 @@
 
 .edit {
     background-color: #00ac33;
+    transition: 0.5s ease;
 }
 
 .delete {
     background-color: rgb(207, 0, 0);
+    transition: 0.5s ease;
+}
+
+.delete:hover {
+    width: 35px;
+    height: 35px;
+    background-color: rgb(160, 2, 2);
+    font-size: 20px;
+}
+
+.edit:hover {
+    width: 35px;
+    height: 35px;
+    background-color: rgb(0, 134, 45);
+    font-size: 20px;
 }
 
 .confirm-delete {
@@ -213,4 +248,63 @@
 }
 .cancel-confirm {
     background-color: #3498db;
+}
+
+.note-skeleton {
+    background-color: #fff;
+    height: auto;
+    width: auto;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 9px 17px 45px -29px rgba(0, 0, 0, 0.44);
+    margin: 20px 20px;
+}
+
+.note-card-img {
+    height: 250px;
+    width: 200px;
+}
+
+.note-card-title {
+    height: 1rem;
+    width: 50%;
+    margin: 1rem;
+    border-radius: 3px;
+}
+
+.note-card-desc {
+    height: 2rem;
+    margin: 1rem;
+    border-radius: 3px;;
+}
+
+.loading-skeleton {
+    position: relative;
+    background-color: #e2e2e2;
+}
+
+.loading-skeleton::after {
+    display: block;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-100%);
+    background: -webkit-gradient(linear, left top,
+                right top, from(transparent), 
+                color-stop(rgba(255, 255, 255, 0.2)),
+                to(transparent));
+                  
+    background: linear-gradient(90deg, transparent,
+            rgba(255, 255, 255, 0.2), transparent);
+
+    /* Adding animation */
+    animation: loading 0.8s infinite;
+}
+
+/* Loading Animation */
+@keyframes loading {
+    100% {
+        transform: translateX(100%);
+    }
 }
