--- a/static/notes/css/note_archive.css
+++ b/static/notes/css/note_archive.css
@@ -137,7 +137,7 @@
 }
 
 .notes img{
-    border: 0.5px solid grey;
+    border: 0.5px solid #E3E6EF;
     cursor: pointer;
     width: 100%;
     max-height: 300px;
