--- a/static/notes/css/share.css
+++ b/static/notes/css/share.css
@@ -32,7 +32,7 @@
 
 .search input{
     padding: 6px;
-    width: 30%;
+    width: 40%;
     min-width: 300px;
     border-radius: 15px;
     border: 1px solid grey;
@@ -82,7 +82,7 @@
 }
 
 .notes img{
-    border: 0.5px solid grey;
+    border: 0.5px solid #E3E6EF;
     cursor: pointer;
     width: 100%;
     max-height: 300px;
@@ -178,4 +178,59 @@
 
 .star-rating-active {
     color: rgb(255, 187, 0);
+}
+
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+
+.autocomplete-items{
+    position:absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+
+.ui-menu-item-wrapper {
+    color: rgba(0,136,169,1);
+    border-radius: 10px;
+}
+
+.ui-autocomplete{
+    border-radius: 10px;
+}
+
+.ui-menu-item{
+    border-radius: 10px;
+}
+
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
+    background-color: rgba(0,136,169,1);
+    border:none
+}
+
+.category-container {
+    width: 100%;
+}
+
+.category-tag {
+    position: relative;
+    background-color: rgba(0,136,169,1);
+    border-radius: 10px;
+    font-size: 18px;
+    color: white;
+    cursor: pointer;
+    margin-left: 100px;
+    padding: 10px;
+    width: max-content;
 }
