--- a/pages/course_content/content-enrolled.css
+++ b/pages/course_content/content-enrolled.css
@@ -243,47 +243,108 @@ button:hover{
     margin-left: 250px;
 }
 
-.interfaceOdd{
-    display: block;
-    padding: 3% 10%;
-    background-color: #afeffa;
-}
-
-.interfaceEven{
-    display: block;
-    padding: 3% 10%;
-    background-color: rgb(224, 239, 252);
-}
-
-.pfp{
-    display: inline-block;
-    border-radius: 100px;
-    width: 2%;
-}
-
-.username{
-    display: inline-block;
-}
-
-p{
+h2{
+    text-align: center;
     margin-top: 1%;
-    margin-bottom: 1%;
+    transition: 0.5s ease;
 }
 
-.interactions{
+h2.active{
+    margin-left: 15%;
+    transition: 0.5s ease;
+}
+
+.options{
+    margin-left: 10%;
+    margin-top: -2%;
+    transition: 0.5s ease;
+}
+
+.options.active{
+    margin-left: 25%;
+    transition: 0.5s ease;
+}
+
+input{
+    margin-top: 0.5%;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 300px;
+}
+
+.background_videos{
+    margin-top: 2%;
+}
+
+.display_texts{
+    margin-top: 2%;
+}
+
+.display_texts button{
+    margin-top: 5px;
+    padding: 5px;
+    width: 35px;
+}
+
+.contacts{
+    margin-top: 2%;
+}
+
+.contacts button{
+    margin-top: 5px;
+    border-radius: 10px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: black;
+    opacity: 0.5;
+}
+
+.contact:hover{
+    opacity: 0.75;
+    background-color: rgba(0,136,169,1);
+}
+
+.contact.on{
+    opacity: 1;
+    background-color: rgba(0,136,169,1);
+}
+
+.contact.on:hover{
+    opacity: 0.75;
+    background-color: black;
+}
+
+.save{
+    margin-top: 3%;
+    border-radius: 15px;
+}
+
+.display img{
+    position: absolute;
+    display: flexbox;
+    width: 40%;
+    margin-left: 55%;
+    margin-top: 1%;
+    z-index: -1;
+}
+
+.display h3{
+    display: flexbox;
+    margin-left: 55%;
+    z-index: -1;
+}
+
+.display{
+    transition: 0.5s ease;
+    margin-top: 2%;
+}
+
+.display.active{
+    transition: 0.5s ease;
     margin-top: 1%;
 }
 
-.interactions i{
-    width: 33%;
-}
-
-.goUp{
-    position: fixed;
-    left: 95%;
-    top: 88%;
-}
-
-html{
-    scroll-behavior: smooth;
+.save{
+    margin-bottom: 5%;
 }
