--- a/notes/templates/notes/share.html
+++ b/notes/templates/notes/share.html
@@ -17,7 +17,7 @@
         {% if category %} 
         <div class="category-container">
             <div class="category-tag">
-                {{category|capfirst}}
+                {{category|title}}
             </div>
         </div>
         {% endif %}
