--- a/static/notes/css/upload.css
+++ b/static/notes/css/upload.css
@@ -25,6 +25,14 @@ h3{
 
 .buttons{
     margin-top: 2%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 2%;
+}
+
+.buttons h3{
+    margin-top: 0;
+    margin-left: 10px;
 }
 
 .public{
@@ -161,4 +169,307 @@ h3{
     margin-top:3px;
     font-size: 13px;
     display: none;
+}
+
+.save-note, .go-to-notes-button{
+    background-color: rgb(0, 132, 255)
+}
+
+.save-note:hover, .go-to-notes-button:hover {
+    background-color: rgb(0, 86, 167)
+}
+
+.cancel-btn, .back-button{
+    background-color: rgb(214, 0, 0)
+}
+
+.cancel-btn:hover, .back-button:hover {
+    background-color: rgb(163, 0, 0)
+}
+
+.cancel-btn:disabled, .save-note:disabled, .disabled {
+    opacity: 0.3;
+    cursor:default;
+}
+
+.switch {
+    position:relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+  }
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+input:checked + .slider {
+    background-color: #2196F3;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.loader-upload {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0,0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    text-align: center;
+    display: none;
+}
+
+.loader-center{
+    position: absolute;
+    top: 48%;
+    left: 46%;
+}
+
+.loader {
+    border: 10px solid rgba(255, 255, 255, 0.3); /* Light grey */
+    border-top: 10px solid rgba(255,255,255,1);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1.5s linear infinite;
+    display: block;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.upload-message{
+    position: absolute;
+    min-height: 100px;
+    width: 30%;
+    top: 40%;
+    left: 35%;
+    background-color: white;
+    padding: 20px 40px;
+    border-radius: 20px;
+    display: none;
+    box-shadow: 8px 3px 30px 0 rgba(0,0,0,0.1);
+}
+
+.message-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.failed-icon {
+    display: inline-block;
+    width: 6em;
+    height: 6em;
+    font-size: 10px;
+    border-radius: 50%;
+    border: 4px solid rgba(218, 13, 13, 0.5);
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+    transform-origin: center;
+    animation: showSuccess 180ms ease-in-out;
+    transform: scale(1);
+ }
+
+.failed-icon__tip_1, .failed-icon__tip_2 {
+    display: block;
+    position: absolute;
+    height: 4px;
+    background-color: #d82424;
+    border-radius: 10px;
+}
+
+.failed-icon__tip_1 {
+    width: 4em;
+    top: 3em;
+    left: 1em;
+    transform: rotate(45deg);
+    animation: tip1InPlace 300ms ease-in-out;
+    animation-fill-mode: forwards;
+    animation-delay: 180ms;
+    visibility: hidden; 
+}
+
+.failed-icon__tip_2 {
+    width: 4em;
+    transform: rotate(-45deg);
+    top: 3em;
+    left: 1em;
+    animation: tip2InPlace 140ms ease-in-out;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    animation-delay: 440ms;
+}
+
+@keyframes tip1InPlace {
+    from {
+        width: 0;
+        top: 1em;
+        left: 0em;
+    }
+    to {
+        width: 4em;
+        top: 3em;
+        left: 1em;
+        visibility: visible;
+    }
+}
+
+@keyframes tip2InPlace {
+    from {
+        width: 0;
+        top: 4em;
+        left: 3em;
+    }
+    to {
+        width: 4em;
+        top: 3em;
+        left: 1em;
+        visibility: visible;
+    }
+}
+
+.success-icon {
+  display: inline-block;
+  width: 6em;
+  height: 6em;
+  font-size: 10px;
+  border-radius: 50%;
+  border: 4px solid rgba(10, 187, 48, 0.5);
+  background-color: #fff;
+  position: relative;
+  overflow: hidden;
+  transform-origin: center;
+  animation: showSuccess 180ms ease-in-out;
+  transform: scale(1);
+}
+
+.success-icon__tip, .success-icon__long {
+    display: block;
+    position: absolute;
+    height: 4px;
+    background-color: #4cc93f;
+    border-radius: 10px;
+}
+
+.success-icon__tip {
+    width: 2.4em;
+    top: 4em;
+    left: 0.8em;
+    transform: rotate(45deg);
+    animation: tipInPlace 300ms ease-in-out;
+    animation-fill-mode: forwards;
+    animation-delay: 180ms;
+    visibility: hidden;
+}
+
+.success-icon__long {
+    width: 4em;
+    transform: rotate(-50deg);
+    top: 3.70em;
+    left: 2.75em;
+    animation: longInPlace 140ms ease-in-out;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    animation-delay: 440ms;
+}
+
+@keyframes showSuccess {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+@keyframes tipInPlace {
+    from {
+        width: 0em;
+        top: 0em;
+        left: -1.6em;
+    }
+    to {
+        width: 2.4em;
+        top: 3.5em;
+        left: 0.8em;
+        visibility: visible;
+    }
+}
+
+@keyframes longInPlace {
+    from {
+        width: 0em;
+        top: 5.1em;
+        left: 3.2em;
+    }
+    to {
+        width: 3.8em;
+        top: 2.9em;
+        left: 2.00em;
+        visibility: visible;
+    }
+}
+
+.status-message {
+    margin-left: 20px;
+}
+
+.buttons-message{
+    display: flex;
+    padding-top: 10px;
+}
+
+.back-button, .go-to-notes-button {
+    margin-left: 10px;
+}
+
+.back-button {
+    margin-left: auto;
 }
